--- a/AssetAPI/appsettings.Development.json
+++ b/AssetAPI/appsettings.Development.json
@@ -6,11 +6,11 @@
     }
   },
   "ConnectionStrings": {
-    "Asset": "Server=host.docker.internal; Database=Inventory; TrustServerCertificate=Yes; User Id=sa; Password=qwertyu1*;"
+    "Asset": "Server=host.docker.internal; Database=Asset; TrustServerCertificate=Yes; User Id=sa; Password=qwertyu1*;"
   },
   "APIs": {
-    "AssetAPI": "https://host.docker.internal:55008",
-    "InvoiceAPI": "https://host.docker.internal:55006",
-    "InvoiceGeneratorAPI": "https://host.docker.internal:55010"
+    "AssetAPI": "https://host.docker.internal:65008",
+    "InvoiceAPI": "https://host.docker.internal:65006",
+    "InvoiceGeneratorAPI": "https://host.docker.internal:65010"
   }
 }
