--- a/InvoiceAPI/appsettings.json
+++ b/InvoiceAPI/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Invoice": "Server=db; Database=Invoice; TrustServerCertificate=Yes; User Id=sa; Password=qwertyu1*;"
+  },
+  "APIs": {
+    "AssetAPI": "https://assetapi:55008",
+    "InvoiceAPI": "https://invoicegeneratorapi:55006",
+    "InvoiceGeneratorAPI": "https://invoiceapi:55010"
+  }
 }
