--- a/InvoiceGeneratorAPI/InvoiceGeneratorAPI.csproj
+++ b/InvoiceGeneratorAPI/InvoiceGeneratorAPI.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>6dd82c64-41cf-4c0b-9f6c-3d821ff71049</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
