--- a/InvoiceGeneratorAPI/appsettings.json
+++ b/InvoiceGeneratorAPI/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "APIs": {
+    "AssetAPI": "https://assetapi:55008",
+    "InvoiceAPI": "https://invoicegeneratorapi:55006",
+    "InvoiceGeneratorAPI": "https://invoiceapi:55010"
+  }
 }
