--- a/Portal/package.json
+++ b/Portal/package.json
@@ -14,6 +14,7 @@
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.3.0-alpha3",
     "core-js": "^3.8.3",
+    "dotenv-webpack": "^8.0.1",
     "jest": "^29.5.0",
     "jest-editor-support": "^31.0.1",
     "moment": "^2.29.4",
