--- a/Invoice.Tests/Invoice.Tests.csproj
+++ b/Invoice.Tests/Invoice.Tests.csproj
@@ -25,8 +25,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AssetRepository\AssetRepository.csproj" />
-    <ProjectReference Include="..\AssetService\AssetService.csproj" />
+    <ProjectReference Include="..\InvoiceRepository\InvoiceRepository.csproj" />
+    <ProjectReference Include="..\InvoiceService\InvoiceService.csproj" />
   </ItemGroup>
 
 </Project>
