--- a/InvoiceAPI/appsettings.json
+++ b/InvoiceAPI/appsettings.json
@@ -10,8 +10,8 @@
     "Invoice": "Server=db; Database=Invoice; TrustServerCertificate=Yes; User Id=sa; Password=qwertyu1*;"
   },
   "APIs": {
-    "AssetAPI": "https://assetapi:55008",
-    "InvoiceAPI": "https://invoicegeneratorapi:55006",
-    "InvoiceGeneratorAPI": "https://invoiceapi:55010"
+    "AssetAPI": "https://assetapi",
+    "InvoiceAPI": "https://invoicegeneratorapi",
+    "InvoiceGeneratorAPI": "https://invoiceapi"
   }
 }
