--- a/InvoiceGeneratorAPI/appsettings.json
+++ b/InvoiceGeneratorAPI/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "APIs": {
-    "AssetAPI": "https://assetapi:55008",
-    "InvoiceAPI": "https://invoicegeneratorapi:55006",
-    "InvoiceGeneratorAPI": "https://invoiceapi:55010"
+    "AssetAPI": "https://assetapi",
+    "InvoiceAPI": "https://invoiceapi",
+    "InvoiceGeneratorAPI": "https://invoicegeneratorapi"
   }
 }
