Added table component

--- a/InvoiceGeneratorAPI/appsettings.Development.json
+++ b/InvoiceGeneratorAPI/appsettings.Development.json
@@ -5,14 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  //"APIs": {
-  //  "AssetAPI": "https://host.docker.internal:65008",
-  //  "InvoiceAPI": "https://host.docker.internal:65006",
-  //  "InvoiceGeneratorAPI": "https://host.docker.internal:65010"
-  //}
   "APIs": {
-    "AssetAPI": "https://assetapi",
-    "InvoiceAPI": "https://invoiceapi",
-    "InvoiceGeneratorAPI": "https://invoicegeneratorapi"
+    "AssetAPI": "https://host.docker.internal:65008",
+    "InvoiceAPI": "https://host.docker.internal:65006",
+    "InvoiceGeneratorAPI": "https://host.docker.internal:65010"
   }
+  //"APIs": {
+  //  "AssetAPI": "https://assetapi",
+  //  "InvoiceAPI": "https://invoiceapi",
+  //  "InvoiceGeneratorAPI": "https://invoicegeneratorapi"
+  //}
 }
